--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,8 @@
+img {
+  height: 70%;
+  width: 70%;
+}
+
 .App {
   text-align: center;
 }
@@ -7,25 +12,23 @@
   pointer-events: none;
 }
 
+/* .body {
+  margin: auto;
+} */
+
+.header {
+  width: 100%;
+  display: inline-flex;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
-  color: #61dafb;
+  margin: 0 10px;
 }
 
 @keyframes App-logo-spin {
